# PwZN2025_Live

./: .gitignore  pyproject.toml
scripts/Lab001/: argparse001.py  ascii_graph001.py  defaultdict001.py  rich001.py  tqdm001.py
scripts/Lab002/: generator001.py  objects001.py  pillow001.py
scripts/Lab003/: arguments001.py  decorators001.py  decorators002.py  decorators003.py  decorators004.py  decorators005.py  decorators006.py  decorators007.py  decorators008.py  decorators009.py  decorators010.py
scripts/Lab004/: gol.ipynb
scripts/Lab005/: employees.json  static_scraping.py
scripts/Lab006/: selenium001.py  selenium002.py
scripts/Lab007/: population_growth.ipynb
scripts/Lab008/: sympy.ipynb
scripts/Lab009/: app.py  bokeh.ipynb
scripts/Lab010/: multiprocessing001.py
